[project]
name = "gridworld-rl"
version = "0.1.0"
description = "GridWorld RL environment for OpenEnv hackathon"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
]

[project.scripts]
openenv-server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"